--- a/CineHunt/package.json
+++ b/CineHunt/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "^10.4.21",
     "axios": "^1.8.4",
     "firebase": "^11.6.0",
+    "lucide-react": "^0.487.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
